tests/fail/union_partial_init.tk

shape BadUnion(as small: i8 | as large: i64)


fn main() -> i32 {
    // EXPECT: Partial initialization of Union 'BadUnion'
    auto u = BadUnion(small = 1); // Should fail: variant size 1 < union size 8
    return 0;
}
